Update lists at 20251115-1501

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -146,6 +146,7 @@ allow 154.205.129.174;
 allow 154.26.159.157;
 allow 154.53.58.161;
 allow 154.90.54.69;
+allow 157.66.25.92;
 allow 160.119.249.240;
 allow 160.187.148.71;
 allow 161.129.68.162;
@@ -155,6 +156,7 @@ allow 162.216.18.62;
 allow 162.220.14.54;
 allow 162.220.14.78;
 allow 162.251.5.152;
+allow 163.172.157.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
 allow 165.73.242.163;
@@ -722,6 +724,7 @@ allow 2001:67c:e60:c0c:192:42:116:219;
 allow 2001:b011:4006:f9a1::b;
 allow 2001:b030:2422::7234;
 allow 2001:bc8:1640:317d:dc00:ff:fe39:7bb3;
+allow 2001:bc8:710:31d7:dc00:ff:fec3:e97;
 allow 2001:bf0:666::666;
 allow 2001:df7:7400:c10d:216:3eff:fecd:511a;
 allow 202.61.253.243;
@@ -1157,7 +1160,6 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:1dc0:caff:f4::bad5;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
-allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -1243,7 +1245,6 @@ allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:47::166;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:1:108::b829:eee2;
-allow 2a06:1700:1:109::209:a94;
 allow 2a06:1700:3:19::1;
 allow 2a06:1700:3:34::1;
 allow 2a06:1700:4:14::1;
@@ -1586,7 +1587,6 @@ allow 37.114.63.5;
 allow 37.187.5.192;
 allow 37.221.208.71;
 allow 37.228.129.128;
-allow 37.228.129.162;
 allow 37.228.129.168;
 allow 37.228.129.189;
 allow 37.228.129.5;
@@ -1720,7 +1720,6 @@ allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
 allow 45.95.233.104;
-allow 46.151.182.26;
 allow 46.165.193.216;
 allow 46.165.243.36;
 allow 46.232.251.191;
