Update lists at 20251115-1801

--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -145,7 +145,6 @@ deny 154.16.116.61;
 deny 154.205.129.174;
 deny 154.26.159.157;
 deny 154.53.58.161;
-deny 154.90.54.69;
 deny 157.66.25.92;
 deny 160.119.249.240;
 deny 160.187.148.71;
@@ -195,7 +194,6 @@ deny 173.224.219.44;
 deny 173.255.198.243;
 deny 176.118.193.33;
 deny 176.121.81.51;
-deny 176.58.121.177;
 deny 176.58.89.182;
 deny 176.65.132.187;
 deny 176.65.134.4;
@@ -204,10 +202,12 @@ deny 176.65.148.3;
 deny 176.65.149.105;
 deny 176.65.149.84;
 deny 176.65.149.87;
+deny 176.65.149.88;
 deny 176.97.114.202;
 deny 177.93.140.66;
 deny 178.162.175.5;
 deny 178.17.170.144;
+deny 178.17.170.225;
 deny 178.17.170.23;
 deny 178.17.170.31;
 deny 178.17.171.102;
@@ -595,7 +595,7 @@ deny 195.47.238.93;
 deny 195.80.151.242;
 deny 195.88.74.206;
 deny 196.196.200.100;
-deny 198.167.206.193;
+deny 198.167.206.172;
 deny 198.251.84.163;
 deny 198.251.84.237;
 deny 198.251.88.18;
@@ -1157,6 +1157,7 @@ deny 2a00:1dc0:caff:44::326d;
 deny 2a00:1dc0:caff:73::a568;
 deny 2a00:1dc0:caff:7a::7865;
 deny 2a00:1dc0:caff:8b::24bd;
+deny 2a00:1dc0:caff:90::b3de;
 deny 2a00:1dc0:caff:f4::bad5;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
@@ -1164,7 +1165,6 @@ deny 2a01:270:9847::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
-deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
@@ -1235,6 +1235,7 @@ deny 2a05:541:110:3e::1;
 deny 2a05:541:112:31::1;
 deny 2a05:b0c7:6388::1;
 deny 2a05:b0c7:655b::1;
+deny 2a05:b0c7:6949::1;
 deny 2a05:b0c7:6bd4::1;
 deny 2a06:1700:0:12::1;
 deny 2a06:1700:0:12::2;
@@ -1720,6 +1721,7 @@ deny 45.95.169.109;
 deny 45.95.169.110;
 deny 45.95.169.252;
 deny 45.95.233.104;
+deny 46.151.182.26;
 deny 46.165.193.216;
 deny 46.165.243.36;
 deny 46.232.251.191;
@@ -1819,6 +1821,8 @@ deny 80.67.167.81;
 deny 80.67.172.162;
 deny 80.94.92.106;
 deny 80.94.92.135;
+deny 80.94.92.92;
+deny 80.94.92.99;
 deny 81.16.33.42;
 deny 81.17.28.95;
 deny 81.181.104.22;
