--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -145,7 +145,6 @@ set_real_ip_from 154.16.116.61;
 set_real_ip_from 154.205.129.174;
 set_real_ip_from 154.26.159.157;
 set_real_ip_from 154.53.58.161;
-set_real_ip_from 154.90.54.69;
 set_real_ip_from 157.66.25.92;
 set_real_ip_from 160.119.249.240;
 set_real_ip_from 160.187.148.71;
@@ -195,7 +194,6 @@ set_real_ip_from 173.224.219.44;
 set_real_ip_from 173.255.198.243;
 set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
-set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.65.132.187;
 set_real_ip_from 176.65.134.4;
@@ -204,10 +202,12 @@ set_real_ip_from 176.65.148.3;
 set_real_ip_from 176.65.149.105;
 set_real_ip_from 176.65.149.84;
 set_real_ip_from 176.65.149.87;
+set_real_ip_from 176.65.149.88;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 177.93.140.66;
 set_real_ip_from 178.162.175.5;
 set_real_ip_from 178.17.170.144;
+set_real_ip_from 178.17.170.225;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.170.31;
 set_real_ip_from 178.17.171.102;
@@ -595,7 +595,7 @@ set_real_ip_from 195.47.238.93;
 set_real_ip_from 195.80.151.242;
 set_real_ip_from 195.88.74.206;
 set_real_ip_from 196.196.200.100;
-set_real_ip_from 198.167.206.193;
+set_real_ip_from 198.167.206.172;
 set_real_ip_from 198.251.84.163;
 set_real_ip_from 198.251.84.237;
 set_real_ip_from 198.251.88.18;
@@ -1157,6 +1157,7 @@ set_real_ip_from 2a00:1dc0:caff:44::326d;
 set_real_ip_from 2a00:1dc0:caff:73::a568;
 set_real_ip_from 2a00:1dc0:caff:7a::7865;
 set_real_ip_from 2a00:1dc0:caff:8b::24bd;
+set_real_ip_from 2a00:1dc0:caff:90::b3de;
 set_real_ip_from 2a00:1dc0:caff:f4::bad5;
 set_real_ip_from 2a00:74a0:e000:1003::114;
 set_real_ip_from 2a00:99a0:0:1000::2;
@@ -1164,7 +1165,6 @@ set_real_ip_from 2a01:270:9847::1;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
-set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:418:6017::147;
 set_real_ip_from 2a02:418:6017::148;
@@ -1235,6 +1235,7 @@ set_real_ip_from 2a05:541:110:3e::1;
 set_real_ip_from 2a05:541:112:31::1;
 set_real_ip_from 2a05:b0c7:6388::1;
 set_real_ip_from 2a05:b0c7:655b::1;
+set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:6bd4::1;
 set_real_ip_from 2a06:1700:0:12::1;
 set_real_ip_from 2a06:1700:0:12::2;
@@ -1720,6 +1721,7 @@ set_real_ip_from 45.95.169.109;
 set_real_ip_from 45.95.169.110;
 set_real_ip_from 45.95.169.252;
 set_real_ip_from 45.95.233.104;
+set_real_ip_from 46.151.182.26;
 set_real_ip_from 46.165.193.216;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.232.251.191;
@@ -1819,6 +1821,8 @@ set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
 set_real_ip_from 80.94.92.106;
 set_real_ip_from 80.94.92.135;
+set_real_ip_from 80.94.92.92;
+set_real_ip_from 80.94.92.99;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
 set_real_ip_from 81.181.104.22;
