--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -145,7 +145,6 @@ allow 154.16.116.61;
 allow 154.205.129.174;
 allow 154.26.159.157;
 allow 154.53.58.161;
-allow 154.90.54.69;
 allow 157.66.25.92;
 allow 160.119.249.240;
 allow 160.187.148.71;
@@ -195,7 +194,6 @@ allow 173.224.219.44;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
-allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.132.187;
 allow 176.65.134.4;
@@ -204,10 +202,12 @@ allow 176.65.148.3;
 allow 176.65.149.105;
 allow 176.65.149.84;
 allow 176.65.149.87;
+allow 176.65.149.88;
 allow 176.97.114.202;
 allow 177.93.140.66;
 allow 178.162.175.5;
 allow 178.17.170.144;
+allow 178.17.170.225;
 allow 178.17.170.23;
 allow 178.17.170.31;
 allow 178.17.171.102;
@@ -595,7 +595,7 @@ allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
-allow 198.167.206.193;
+allow 198.167.206.172;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -1157,6 +1157,7 @@ allow 2a00:1dc0:caff:44::326d;
 allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:7a::7865;
 allow 2a00:1dc0:caff:8b::24bd;
+allow 2a00:1dc0:caff:90::b3de;
 allow 2a00:1dc0:caff:f4::bad5;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
@@ -1164,7 +1165,6 @@ allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1235,6 +1235,7 @@ allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1700:0:12::1;
 allow 2a06:1700:0:12::2;
@@ -1720,6 +1721,7 @@ allow 45.95.169.109;
 allow 45.95.169.110;
 allow 45.95.169.252;
 allow 45.95.233.104;
+allow 46.151.182.26;
 allow 46.165.193.216;
 allow 46.165.243.36;
 allow 46.232.251.191;
@@ -1819,6 +1821,8 @@ allow 80.67.167.81;
 allow 80.67.172.162;
 allow 80.94.92.106;
 allow 80.94.92.135;
+allow 80.94.92.92;
+allow 80.94.92.99;
 allow 81.16.33.42;
 allow 81.17.28.95;
 allow 81.181.104.22;
