--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -135,6 +135,7 @@ allow 149.102.153.38;
 allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.44.47;
+allow 151.243.109.71;
 allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.150.12;
@@ -145,7 +146,6 @@ allow 154.16.116.61;
 allow 154.205.129.174;
 allow 154.26.159.157;
 allow 154.53.58.161;
-allow 157.66.25.92;
 allow 160.119.249.240;
 allow 160.187.148.71;
 allow 161.129.68.162;
@@ -274,7 +274,6 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.129.62.64;
 allow 185.130.47.58;
-allow 185.132.53.107;
 allow 185.132.53.150;
 allow 185.132.53.188;
 allow 185.132.53.88;
@@ -876,6 +875,7 @@ allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
 allow 23.137.252.225;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.254.244;
 allow 23.137.255.85;
@@ -959,6 +959,7 @@ allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fccf:100:3::14;
 allow 2604:2dc0:202:300::ed3;
@@ -1161,6 +1162,7 @@ allow 2a00:1dc0:caff:90::b3de;
 allow 2a00:1dc0:caff:f4::bad5;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
+allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -1218,7 +1220,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1230,7 +1231,6 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9b85:500::58;
-allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
@@ -1571,7 +1571,6 @@ allow 2a14:7583:f607::;
 allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:20::a;
 allow 2a14:c380:50:60::a;
-allow 2a14:c380:50:62::a;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.133.0.235;
@@ -1745,7 +1744,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1841,7 +1839,6 @@ allow 82.221.131.71;
 allow 82.221.139.190;
 allow 82.29.128.145;
 allow 83.217.9.73;
-allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.200.125.118;
