--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -33,7 +33,6 @@ allow 104.244.78.233;
 allow 104.244.79.44;
 allow 104.244.79.50;
 allow 104.244.79.61;
-allow 104.36.80.7;
 allow 107.172.61.206;
 allow 107.173.187.181;
 allow 107.174.146.25;
@@ -194,6 +193,7 @@ allow 173.224.219.44;
 allow 173.255.198.243;
 allow 176.118.193.33;
 allow 176.121.81.51;
+allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.65.132.187;
 allow 176.65.134.4;
@@ -274,6 +274,7 @@ allow 185.129.62.62;
 allow 185.129.62.63;
 allow 185.129.62.64;
 allow 185.130.47.58;
+allow 185.132.53.107;
 allow 185.132.53.150;
 allow 185.132.53.188;
 allow 185.132.53.88;
@@ -482,6 +483,7 @@ allow 185.40.4.64;
 allow 185.40.4.92;
 allow 185.42.170.203;
 allow 185.56.171.94;
+allow 185.62.58.24;
 allow 185.67.82.114;
 allow 185.82.219.109;
 allow 188.239.191.25;
@@ -902,8 +904,8 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
-allow 23.191.200.27;
 allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
@@ -1161,12 +1163,14 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:1dc0:caff:90::b3de;
 allow 2a00:1dc0:caff:f4::bad5;
 allow 2a00:74a0:e000:1003::114;
+allow 2a00:7b80:452:3000::24;
 allow 2a00:99a0:0:1000::2;
 allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
@@ -1571,6 +1575,7 @@ allow 2a14:7583:f607::;
 allow 2a14:c380:280:77::a;
 allow 2a14:c380:50:20::a;
 allow 2a14:c380:50:60::a;
+allow 2a14:c380:50:62::a;
 allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.133.0.235;
@@ -1625,7 +1630,6 @@ allow 45.133.73.63;
 allow 45.133.74.53;
 allow 45.134.225.36;
 allow 45.134.48.153;
-allow 45.137.201.26;
 allow 45.137.201.31;
 allow 45.137.201.55;
 allow 45.137.70.158;
@@ -1722,7 +1726,6 @@ allow 45.95.169.252;
 allow 45.95.233.104;
 allow 46.151.182.26;
 allow 46.165.193.216;
-allow 46.165.243.36;
 allow 46.232.251.191;
 allow 46.234.47.105;
 allow 46.250.243.29;
@@ -1839,7 +1842,6 @@ allow 82.221.131.71;
 allow 82.221.139.190;
 allow 82.29.128.145;
 allow 83.217.9.73;
-allow 84.16.224.227;
 allow 84.19.182.20;
 allow 84.200.125.118;
 allow 84.239.46.144;
@@ -1914,5 +1916,6 @@ allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
+allow 96.8.119.172;
 allow 97.90.239.170;
 allow 98.128.173.33;
