--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -256,8 +256,6 @@ allow 185.107.57.66;
 allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
-allow 185.120.16.171;
-allow 185.120.16.176;
 allow 185.126.114.110;
 allow 185.129.61.1;
 allow 185.129.61.10;
@@ -877,7 +875,6 @@ allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
 allow 23.137.252.225;
-allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.254.244;
 allow 23.137.255.85;
@@ -904,6 +901,7 @@ allow 23.191.200.23;
 allow 23.191.200.24;
 allow 23.191.200.25;
 allow 23.191.200.26;
+allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
 allow 23.191.200.3;
@@ -961,7 +959,6 @@ allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
-allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fccf:100:3::14;
 allow 2604:2dc0:202:300::ed3;
@@ -1224,6 +1221,7 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
+allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1235,6 +1233,7 @@ allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:9b85:500::58;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
@@ -1494,6 +1493,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
+allow 2a10:c800:1:f7f8:0:1ce:1ce:babe;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:133;
@@ -1630,6 +1630,7 @@ allow 45.133.73.63;
 allow 45.133.74.53;
 allow 45.134.225.36;
 allow 45.134.48.153;
+allow 45.137.201.26;
 allow 45.137.201.31;
 allow 45.137.201.55;
 allow 45.137.70.158;
@@ -1747,6 +1748,7 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1842,6 +1844,7 @@ allow 82.221.131.71;
 allow 82.221.139.190;
 allow 82.29.128.145;
 allow 83.217.9.73;
+allow 83.97.20.77;
 allow 84.19.182.20;
 allow 84.200.125.118;
 allow 84.239.46.144;
@@ -1883,6 +1886,7 @@ allow 91.208.75.239;
 allow 91.208.75.3;
 allow 91.208.75.4;
 allow 91.219.236.101;
+allow 91.219.237.39;
 allow 91.92.109.126;
 allow 91.92.109.43;
 allow 92.243.24.163;
