Update lists at 20251116-0901

--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -125,7 +125,6 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
-allow 2600:4040:b1e2:4700:4f41:cf66:3500:fdbf;
 allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
@@ -140,6 +139,7 @@ allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
 allow 2602:f7a3:0:d900::a;
 allow 2602:f915:f:3b43::1;
+allow 2602:fa4f:b01:ba02:266:af34:13ca:eb7b;
 allow 2602:fa59:5:915::1;
 allow 2602:fa86::be24:11ff:fe70:fc41;
 allow 2602:fa8a:3:a::a;
