--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -134,7 +134,6 @@ allow 149.102.153.38;
 allow 149.202.79.101;
 allow 149.202.79.129;
 allow 149.56.44.47;
-allow 151.243.109.71;
 allow 152.32.206.127;
 allow 152.53.106.19;
 allow 152.53.150.12;
@@ -237,7 +236,6 @@ allow 179.43.159.201;
 allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
-allow 180.150.226.99;
 allow 184.75.221.107;
 allow 185.100.85.132;
 allow 185.100.85.24;
@@ -279,7 +277,6 @@ allow 185.132.53.150;
 allow 185.132.53.188;
 allow 185.132.53.88;
 allow 185.138.88.25;
-allow 185.141.216.154;
 allow 185.150.28.13;
 allow 185.154.110.142;
 allow 185.154.110.17;
@@ -905,10 +902,12 @@ allow 23.191.200.25;
 allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
+allow 23.191.200.29;
 allow 23.191.200.3;
 allow 23.191.200.30;
 allow 23.191.200.31;
 allow 23.191.200.4;
+allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
 allow 23.191.200.8;
@@ -938,7 +937,6 @@ allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c04::f03c:95ff:fe41:d42c;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
-allow 2600:4040:b1e2:4700:4f41:cf66:3500:fdbf;
 allow 2602:2e5::104;
 allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
@@ -953,6 +951,7 @@ allow 2602:f6f6:2:d31a::1;
 allow 2602:f6f6:2:dc17::1;
 allow 2602:f7a3:0:d900::a;
 allow 2602:f915:f:3b43::1;
+allow 2602:fa4f:b01:ba02:266:af34:13ca:eb7b;
 allow 2602:fa59:5:915::1;
 allow 2602:fa86::be24:11ff:fe70:fc41;
 allow 2602:fa8a:3:a::a;
@@ -1675,6 +1674,7 @@ allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.15.140.245;
 allow 45.154.98.33;
+allow 45.192.241.204;
 allow 45.38.20.153;
 allow 45.38.20.240;
 allow 45.58.190.74;
@@ -1920,5 +1920,4 @@ allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 97.90.239.170;
-allow 98.117.193.184;
 allow 98.128.173.33;
