--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -134,7 +134,6 @@ deny 149.102.153.38;
 deny 149.202.79.101;
 deny 149.202.79.129;
 deny 149.56.44.47;
-deny 151.243.109.71;
 deny 152.32.206.127;
 deny 152.53.106.19;
 deny 152.53.150.12;
@@ -237,7 +236,6 @@ deny 179.43.159.201;
 deny 179.43.159.78;
 deny 179.43.182.232;
 deny 179.43.182.58;
-deny 180.150.226.99;
 deny 184.75.221.107;
 deny 185.100.85.132;
 deny 185.100.85.24;
@@ -279,7 +277,6 @@ deny 185.132.53.150;
 deny 185.132.53.188;
 deny 185.132.53.88;
 deny 185.138.88.25;
-deny 185.141.216.154;
 deny 185.150.28.13;
 deny 185.154.110.142;
 deny 185.154.110.17;
@@ -905,10 +902,12 @@ deny 23.191.200.25;
 deny 23.191.200.26;
 deny 23.191.200.27;
 deny 23.191.200.28;
+deny 23.191.200.29;
 deny 23.191.200.3;
 deny 23.191.200.30;
 deny 23.191.200.31;
 deny 23.191.200.4;
+deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
 deny 23.191.200.8;
@@ -938,7 +937,6 @@ deny 2600:3c03::f03c:95ff:fe5d:562;
 deny 2600:3c04::f03c:95ff:fe41:d42c;
 deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
-deny 2600:4040:b1e2:4700:4f41:cf66:3500:fdbf;
 deny 2602:2e5::104;
 deny 2602:f6f6:2:2634::1;
 deny 2602:f6f6:2:3637::1;
@@ -953,6 +951,7 @@ deny 2602:f6f6:2:d31a::1;
 deny 2602:f6f6:2:dc17::1;
 deny 2602:f7a3:0:d900::a;
 deny 2602:f915:f:3b43::1;
+deny 2602:fa4f:b01:ba02:266:af34:13ca:eb7b;
 deny 2602:fa59:5:915::1;
 deny 2602:fa86::be24:11ff:fe70:fc41;
 deny 2602:fa8a:3:a::a;
@@ -1675,6 +1674,7 @@ deny 45.145.93.133;
 deny 45.148.10.111;
 deny 45.15.140.245;
 deny 45.154.98.33;
+deny 45.192.241.204;
 deny 45.38.20.153;
 deny 45.38.20.240;
 deny 45.58.190.74;
@@ -1920,5 +1920,4 @@ deny 95.168.173.143;
 deny 95.211.174.137;
 deny 95.211.244.28;
 deny 97.90.239.170;
-deny 98.117.193.184;
 deny 98.128.173.33;
